@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+The Darcap church is now a sacred place, don't kill ghosts there!
+Nicolas Weeger 2010-01-09
+
 Give the price in coins instead of platinum only.
 Nicolas Weeger 2010-01-09
 
